[package]
name = "rusty-car"
version = "0.1.1"
authors = ["Frank Lyaruu <flyaruu@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.15.0", features=["embassy","async","embassy-time-timg0"] }
esp-backtrace = { version = "0.10.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32c3","log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { version = "0.3", features = ["esp32c3", "wifi", "embassy-net", "async", "esp-now"] }
embedded-svc = { version = "0.27", default-features = false, features = [] }
embedded-io = "0.6"
heapless = { version = "0.7.14", default-features = false }
embassy-time = "0.3"
embassy-executor = { version = "0.5", features = ["nightly", "integrated-timers","arch-riscv32","executor-thread"] }

static_cell = { version="2.0", features = ["nightly"] }
embassy-sync = "0.5.0"
embassy-futures = "0.1"
embedded-hal = { version="1.0.0" }
embedded-hal-async = "1.0.0"
embedded-io-async = { version = "0.6.0" }
protocol = { path = "../protocol" }
