[package]
name = "controller"
version = "0.1.0"
authors = ["Frank Lyaruu <flyaruu@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.13.0", features=["embassy","async","embassy-time-timg0"] }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32c3","log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { version = "0.1.1", features = ["esp32c3", "wifi", "embassy-net", "async", "esp-now"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }
embassy-time = "0.1.5"
embassy-executor = { version = "=0.3.2", features = ["nightly", "integrated-timers","arch-riscv32","executor-thread"] }

static_cell = { version="=1.2.0", features = ["nightly"] }
embassy-sync = "0.3.0"
embassy-futures = "0.1.0"
embedded-hal = { version="=1.0.0-rc.1" }
embassy-net = { version = "0.2.1", features = ["nightly","medium-ip", "tcp", "medium-ethernet", "dhcpv4", "log", "udp"] }

embedded-hal-async = "1.0.0-rc.1"
embassy-net-driver = "0.2.0"
embedded-io-async = { version = "0.6.0" }
picoserve = "0.3.0"

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", features = ["alloc"], default-features = false }

protocol = { path = "../protocol" }
rotary-encoder-hal = { git="https://github.com/flyaruu/rotary-encoder-hal", features = ["embedded-hal-rc"], rev="a11f4a2" }
