[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.8", default-features = false, features = ["postcard-derive", "alloc"] }
serde = { version = "1.0.193", default-features = false, features = ["alloc", "serde_derive"] }
